[package]
name = "shaysproxy"
version = "0.0.0"
authors = ["Shayne Hartford <shaybox@shaybox.com>"]
edition = "2021"
description = "My personal Minecraft proxy using Azalea"
readme = "README.md"
homepage = "https://git.shaybox.com/shaysproxy/releases/latest"
repository = "https://github.com/ShayBox/ShaysProxy"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
#azalea-protocol = { path = "../azalea/azalea-protocol" }
azalea-protocol = { git = "https://github.com/Shays-Forks/azalea.git", branch = "Add-IntoVariant" }
derive-config = { version = "2", default-features = false, features = ["toml"] }
serde = { version = "1", features = ["derive"] }
smart-default = "0.7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# cargo = { level = "warn", priority = -1 }
