[package]
name = "shaysproxy"
version = "0.2.0"
authors = ["Shayne Hartford <shaybox@shaybox.com>"]
edition = "2024"
description = "My personal Minecraft TCP proxy written in Rust"
readme = "README.md"
homepage = "https://git.shaybox.com/shaysproxy/releases/latest"
repository = "https://github.com/ShayBox/ShaysProxy"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
azalea-protocol = { git = "https://github.com/Shays-Forks/azalea.git" }
derive_more = { version = "2", features = ["full"] }
hickory-resolver = "0.25"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
similar_names = { level = "allow" }